[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/sprites/dialoguebox.png" type="Texture" id=1]
[ext_resource path="res://menu/layers/dialogue_box.gd" type="Script" id=2]
[ext_resource path="res://menu/layers/yes_no_box.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sfx/medium-text-blip-14855.mp3" type="AudioStream" id=4]
[ext_resource path="res://font/new_dynamicfont2.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/Scenery/Main Menu.png" type="Texture" id=7]

[node name="DialogueBox" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="lvl1_bg" type="TextureRect" parent="."]
visible = false
margin_right = 1921.0
margin_bottom = 1080.0
texture = ExtResource( 7 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -610.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 340.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
margin_top = 40.0
margin_right = 1250.0
margin_bottom = 166.0
custom_constants/margin_right = 40
custom_constants/margin_left = 40

[node name="Label" type="Label" parent="TextureRect/MarginContainer"]
margin_left = 40.0
margin_right = 1210.0
margin_bottom = 126.0
custom_fonts/font = ExtResource( 5 )
text = "Laaadalasfajfajfahfoias
lafhafoafoaihfoafoiahsafosafasf
afafsafjaaaaaaaaaaaaaaaaaaaaaaa"
autowrap = true

[node name="MarginContainer2" type="MarginContainer" parent="TextureRect"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -480.0
margin_top = -450.0
margin_right = -39.9993
margin_bottom = -390.0

[node name="Label2" type="Label" parent="TextureRect/MarginContainer2"]
margin_top = 10.0
margin_right = 440.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 5 )
text = "Press Space to continue"

[node name="TypeSpeed" type="Timer" parent="."]
wait_time = 0.02

[node name="YesNoBox" parent="." instance=ExtResource( 3 )]
margin_left = 827.0
margin_top = 378.0
margin_right = 847.0
margin_bottom = 398.0
custom_fonts/font = ExtResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[connection signal="timeout" from="TypeSpeed" to="." method="_on_typespeed_timeout"]
